--- a/src/app.css
+++ b/src/app.css
@@ -13,25 +13,21 @@
     font-style: normal;
   }
   
-  body {
-    background-color: black;
+  
+  html, body {
+    background-color: #000; /* Set the background color to black */
     margin: 0;
     padding: 0;
     height: 100%;
-    width: 100%;
+
   }
   
-  html {
-    height: 100%;
-  }
-  
+ 
   #app {
     background-color: black;
     color: #00ff00; /* Optional: Green color for text, matching your neon theme */
     height: 100%;
   }
   
-  .battle-list {
-    min-height: 100vh; /* Ensure the container stretches to the full height of the viewport */
-    background-color: black; /* Apply black background color */
-  }
+
+  
